index.css
/* Table of Contents
1. Typography
2. Generic Element Styles
3. Specific Element Styles
4. Media Queries
*/

/* Typography */
* {
  font-family: "Cinzel", serif;
}

/* Generic Element Styles */
body {
  background: rgba(0, 0, 0, .01);
  transition: 1s;
  overflow-x: hidden;
}

button {
  background: none;
  border: none;
  border-radius: 20px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, .25);
  padding: 8px 20px;
  margin: 12px 0;
}

header {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
}

h1 {
  text-align: center;
  margin: auto;
  padding-left: 32px;
}

main, .cards-holder {
  align-items: center;
  display: flex;
  justify-content: center;
}

sub, sup {
  color: gold;
}

sup {
  padding: 0 0 0 4px;
}

/* Specific Element Styles */
#button-controller {
  z-index: 0;
}

.cards-holder {
  position: relative;
  left: 150px;
}

.card-container {
  background: white;
  border-radius: 12px;
  border: 4px solid rgba(255, 215, 0);
  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.25);
  display: flex;
  padding: 16px;
  height: 210px;
  width: 130px;
  position: relative;
}

.dragon {
  color: red;
  font-size: 4rem;
  margin: auto;
}

.light-theme, #l-card-theme {
  background: white;
  color: black;
}

.light-theme:hover {
  background: black;
  color: white;
}

.dark-theme, #d-card-theme {
  background-color: rgb(39, 39, 39);
  color: white;
}

.dark-theme:hover {
  background-color: white;
  color: black;
}

.material-icons {
  padding-right: 8px;
}

.move-left-1 {
  right: 75px;
}

.move-left-2 {
  right: calc(75px * 2);
}

.move-left-3 {
  right: calc(75px * 3);
}

.move-left-4 {
  right: calc(75px * 4);
}

#player-container, #dealer-container, .scoreboard, #button-controller {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.right-card-number {
  transform: rotate(180deg);
}

.scoreboard {
  font-size: 18px;
  margin: 2rem;
}

.text-output-container {
  display: flex;
  justify-content: center;
}

.text-output {
  width: 16rem;
  height: 14rem;
  overflow-y: scroll;
  background: rgb(56,56,56);
  color: lightblue;
  visibility: hidden;
  font-family: monospace;
}

/* Media Queries */
@media screen and (max-width: 500px) {
  * {
    overflow: hidden;
  }

  header, .scoreboard, #button-controller {
    font-size: 0.8rem;
  }

  main {
    flex-direction: column;
  }

  #button-controller {
    margin: 2rem 0;
  } 

  .card-container {
    padding: 16px;
    height: 150px;
    width: 90px;
  }

  .material-icons {
    font-size: 1rem;
  } 
}

